# fastnn

./: .find_duplicates.py  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  ARCHITECTURE_PLAN.md  BENCHMARKS.md  BREAKING_CHANGES.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FINAL_PLAN.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  GPU_OPTIMIZATION_SUMMARY.md  GPU_PERFORMANCE_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  Makefile  OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_TODO.md  PHASE0_BASELINE.md  PHASE1_PROGRESS.md  PHASE2_IMPLEMENTATION.md  README.md  REMAINING_OPTIMIZATIONS.md  STATUS_REPORT.md  TEST_UTILITIES_ENHANCEMENT.md  TODO.md  analyze_profile.py  bench_compare.py  bench_ddp.prof  bench_fused.py  bench_pytorch.py  benchmark_backward_passes.py  benchmark_fastnn_performance.py  benchmark_fastnn_vs_pytorch.py  benchmark_fused_kernels.py  benchmark_optimizations.py  (+35 more)
.benchmarks/Linux-CPython-3.13-64bit/: 0001_f920ec7875a07e5cd5e78a884f11c200daa0b47d_20260318_194240.json
.cargo/: config.toml
.github/: merge_benchmarks.py
.github/workflows/: ci.yml  coverage.yml  release.yml
.kilo/plans/: 1773861384622-quiet-panda.md
benches/: bench_util.rs  compiled_training_vs_pytorch.rs  cpu_baselines.rs  matmul_bench.rs  matmul_direct.rs  packed_bench.rs  packed_bench_json.rs  packed_dispatch_bench.rs  perf_optimizations.rs  quantized_vs_pytorch.rs  wgpu_bench.rs  wgpu_inference.rs  zeros_vs_empty.rs
benchmarks/: hotpath_bench.py  maxpool2d_bench.py  multiprocess_iterator_test.py  pytorch_comparison.py  storage_pool_bench.py  tensor_creation_bench.py  test_dataloader.py  test_dataloader2.py  test_maxpool2d.py  test_maxpool2d_fix.py
benchmarks/raspberry_pi/: run_bench.sh
blas_test/: Cargo.toml
blas_test/src/: main.rs
ci/: clippy-baseline.txt  rustfmt-baseline.txt
docs/: api-reference.md  architecture.md  arm-neon.md  development.md  getting-started.md  index.md  io.md  models.md  nn-modules.md  onnx-training-export.md  onnx.md  optimizers.md  performance-roadmap.md  python-api.md  release-process.md  tensors.md  training.md  v2.3-roadmap.md
docs/benchmarks/: w4a8-baseline-2026-07-22.md  yolo11n-quantization-baseline-2026-07-23.md
docs/guides/: getting-started.md
docs/internals/: architecture.md  arm-neon.md  development.md  performance-roadmap.md  release-process.md
docs/models/: models.md  onnx-training-export.md  onnx.md
docs/plans/: 2026-06-02-autonomous-excellence-plan.md  2026-06-03-prepared-plan-packed-inference.md  autonomous-fastnn-persistent-plan.md  autonomous-fastnn-work-log.md  conv-backend-probe.md  conv-blocked-kernel-bench.md  conv-im2col-variant-bench.md  conv-phase-bench.md  gemm-backend-bench.md  gemm-layout-bench.md  graph-memory-profile.md  graph-memory-stats.md  model-zoo-cpu-matrix.md  openblas-conv-gemm-integration.md  packed-static-conv-weights.md  prepared-arena-preload-fallback.md  prepared-constant-arena-notes.md  prepared-execute-fallback-v2.md  prepared-executor-analysis.md  prepared-fallback-overhead-bench.md  prepared-packed-weight-design.md  prepared-plan-baseline.md  prepared-static-weight-detection.md  prepared-stats-arena.md  prepared-stats-yolo-script.md  rejected-direct-stem-conv-spike.md  u4u8-rewrite-plan.md  (+6 more)
examples/: README.md  bench_i4.rs  cache_analysis.rs  conv_blocked_kernel_bench.rs  conv_im2col_variant_bench.rs  conv_phase_bench.rs  gemm_backend_bench.rs  gemm_bench.rs  gemm_layout_bench.rs  onnx_pipeline.py  packed_gemv_bench.rs  quantized_transformer.rs  yolo_inference.py
fastnn/: AGENTS.md  __init__.py  _common.py  _model_wrapper.py  _typing.py  activations.py  callbacks.py  core.py  data.py  export.py  fastnn_types.py  functional.py  init.py  io.py  layers.py  llm.py  losses.py  module.py  nn.py  onnx_import.py  ops.py  optimizers.py  parallel.py  precision.py  schedulers.py  serialization.py  serialization_utils.py  tensor.py  typing.py  utils.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: executable_deserialization.rs  graph_deserialization.rs  quantization_metadata.rs  runtime_tightening.rs  typed_attributes.rs
results/: final_yolo_compare.json  full_release_openblas2.json  yolo11n_release_openblas2.json  yolo_compare.json  yolo_openblas.json  yolo_openblas_2t.json  yolo_openblas_4t.json  yolo_quant.json  yolo_release_openblas2.json
scripts/: calibrate_yolo.py  calibration_dataset.py  conv_backend_probe.py  conv_shape_microbench.py  criterion_to_json.py  graph_memory_profile.py  graph_memory_stats.py  model_zoo_cpu_matrix.py  prepared_fallback_overhead.py  run_miri_safety.sh  yolo_coco_map.py  yolo_compare_fastnn_pytorch.py  yolo_compare_fastnn_pytorch.py.orig  yolo_compare_fastnn_pytorch.py.rej  yolo_constant_overhead.py  yolo_conv_shape_profile.py  yolo_conv_shape_stats.py  yolo_dtype_audit.py  yolo_fastnn_coco_eval.py  yolo_openblas_thread_sweep.py  yolo_prepared_stats.py  yolo_quant_fast_triplet.py  yolo_quant_runner.py  yolo_runtime_matrix.py  yolo_validate.py
src/: AGENTS.md  autograd.rs  dispatcher.rs  error.rs  iterator.rs  lib.rs  packed_conv.rs  packed_layer.rs  packed_tensor.rs  packed_train.rs  residual.rs  storage.rs  storage_pool.rs  storage_quantized.rs  tensor.rs  test_im2col.rs  utils.rs
tests/: AGENTS.md  X_test.npy  X_train.npy  __init__.py  autograd_gradient_checks.rs  bench_comparison.py  bench_ddp.py  bench_fastnn.py  bench_final.py  bench_gpu.py  bench_gpu_simple.py  bench_large_tensors.py  bench_simple.py  bench_tensor_ops.py  bench_training_loop.py  bench_vs_pytorch.py  benchmark_utils.py  compiler_edge_cases.rs  compiler_pipeline_report.rs  concat_to_conv_eligibility.rs  concurrency_assurance.rs  conftest.py  cpu_arena_telemetry.rs  cpu_reference_oracle.rs  cross_arch_consistency.rs  generate_dataset.py  gguf_integration.rs  memory_planning_tests.rs  onnx_export_quantized.rs  onnx_export_training.rs  optim_test.rs  packed_integration.rs  profile_relu.py  public_error_paths.rs  q4k_q6k_python_reference.rs  quantized_conv_regression.rs  quantized_pipeline.rs  quick_transformer_test.py  release_error_paths.rs  residual_add_norm.rs  (+42 more)
(+294 files in other folders)
