[package]
name = "fastnn"
version = "2.2.0"
edition = "2021"

[lib]
name = "fastnn"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3          = { version = "0.28", features = ["extension-module", "abi3-py312"], optional = true }
rayon         = { version = "1.8", optional = true }
smallvec      = { version = "1.11", features = ["union", "const_generics"] }
safetensors   = "0.4"
half          = "2.3"
bytemuck      = "1.14"
thiserror     = "1.0"
parking_lot   = "0.12"
dashmap       = "6"
ctor          = "0.2"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
bincode       = "1.3"
rand          = "0.8"
matrixmultiply = "0.3"
mimalloc      = "0.1"
wide         = "0.7"
wgpu         = { version = "24", optional = true }
pollster     = { version = "0.4", optional = true }
openblas-src = { version = "0.10", optional = true }
blas-src     = { version = "0.10", features = ["openblas"], optional = true }
fnv          = "1.0"
rustc-hash  = "2.0"
clap         = { version = "4", features = ["derive"], optional = true }

[features]
default = ["simd", "parallel", "simd_avx512", "fusion-forward", "python"]
python = ["dep:pyo3"]
gpu = ["dep:wgpu", "dep:pollster"]
openblas = ["blas-src/openblas-src"]
blas = []
parallel = ["rayon"]
simd = []
simd_avx512 = []

# ── Fusion passes (compile-time modular) ─────────────────────────────
fusion-forward = [
  "fusion-op-relu",
  "fusion-op-gelu",
  "fusion-op-silu",
  "fusion-matmul-add-relu",
  "fusion-matmul-add-gelu",
  "fusion-matmul-add-silu",
  "fusion-residual-add-norm",
]
fusion-op-relu = []
fusion-op-gelu = []
fusion-op-silu = []
fusion-matmul-add-relu = []
fusion-matmul-add-gelu = []
fusion-matmul-add-silu = []
fusion-residual-add-norm = []
fusion-backward = []

# ── CLI binary ────────────────────────────────────────────────────────
cli = ["dep:clap"]

[[bin]]
name = "fastnn-runtime"
path = "src/bin/runtime.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true

[[bench]]
name = "quantized_vs_pytorch"
path = "benches/quantized_vs_pytorch.rs"
harness = false

[[bench]]
name = "packed_bench"
path = "benches/packed_bench.rs"
harness = false

[[bench]]
name = "wgpu_bench"
path = "benches/wgpu_bench.rs"
harness = false


[[bench]]
name = "perf_optimizations"
path = "benches/perf_optimizations.rs"
harness = false

[[bench]]
name = "packed_dispatch_bench"
path = "benches/packed_dispatch_bench.rs"
harness = false

[[bench]]
name = "compiled_training_vs_pytorch"
path = "benches/compiled_training_vs_pytorch.rs"
harness = false

[[bench]]
name = "wgpu_inference"
path = "benches/wgpu_inference.rs"
harness = false


