[package]
name = "fastnn"
version = "2.2.4"
edition = "2021"
autobenches = false

[lib]
name = "fastnn"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3          = { version = "0.28", features = ["extension-module", "abi3-py311"], optional = true }
rayon         = { version = "1.8", optional = true }
smallvec      = { version = "1.11", features = ["union", "const_generics"] }
half          = "2.3"
bytemuck      = "1.14"
thiserror     = "1.0"
parking_lot   = "0.12"
dashmap       = "6"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
bincode       = "1.3"
rand          = "0.8"
matrixmultiply = { version = "0.3", features = ["threading"] }
wgpu         = { version = "24", optional = true }
pollster     = { version = "0.4", optional = true }
openblas-src = { version = "0.10", optional = true }
blas-src     = { version = "0.10", features = ["openblas"], optional = true }
fnv          = "1.0"
rustc-hash  = "2.0"
clap         = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }

[features]
default = ["simd", "parallel", "fusion-forward", "python"]
python = ["dep:pyo3"]
gpu = ["dep:wgpu", "dep:pollster"]
openblas = ["blas-src/openblas-src"]
blas = []
parallel = ["rayon"]
simd = []
debug_canary = []
prepared-plan = []

# ── Fusion passes (compile-time modular) ─────────────────────────────
fusion-forward = [
  "fusion-op-relu",
  "fusion-op-gelu",
  "fusion-op-silu",
  "fusion-matmul-add-relu",
  "fusion-matmul-add-gelu",
  "fusion-matmul-add-silu",
  "fusion-residual-add-norm",
]
fusion-op-relu = []
fusion-op-gelu = []
fusion-op-silu = []
fusion-matmul-add-relu = []
fusion-matmul-add-gelu = []
fusion-matmul-add-silu = []
fusion-residual-add-norm = []
fusion-backward = []

# ── CLI binary ────────────────────────────────────────────────────────
cli = ["dep:clap"]

[[example]]
name = "gemm_bench"
path = "examples/gemm_bench.rs"

[[bin]]
name = "fastnn-runtime"
path = "src/bin/runtime.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true

[[bench]]
name = "cpu_baselines"
path = "benches/cpu_baselines.rs"
harness = false


