[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastnn"
version = "2.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]
torch = ["torch>=2.11.0"]

[project.scripts]
fastnn-convert = "fastnn.io.convert:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "fastnn._core"
